--- a/.github/workflows/test-release.yaml
+++ b/.github/workflows/test-release.yaml
@@ -1,9 +1,9 @@
 name: Release to Test PyPI
 
-on:
-  push:
-    branches:
-      - "main"
+# on:
+#   push:
+#     branches:
+#       - "dev"
 
 permissions:
   id-token: write
