--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -31,9 +31,9 @@ jobs:
             TAG_NAME=${GITHUB_REF#refs/tags/}
             NEW_VERSION=$(echo "$TAG_NAME" | awk -F'-' '{print $1}')
             SUFFIX=$(echo "$TAG_NAME" | grep -oP '[a-z]+[0-9]+' || echo "")
-            echo "new_version=$NEW_VERSION" >> "$GITHUB_OUTPUT"
-            echo "suffix=$SUFFIX" >> "$GITHUB_OUTPUT"
-            echo "tag_name=$TAG_NAME" >> "$GITHUB_OUTPUT"
+            echo "new_version=$NEW_VERSION" >> $GITHUB_ENV
+            echo "suffix=$SUFFIX" >> $GITHUB_ENV
+            echo "tag_name=$TAG_NAME" >> $GITHUB_ENV
             echo "Version is $NEW_VERSION"
             echo "Suffix is $SUFFIX"
             echo "Tag name is $TAG_NAME"
@@ -45,12 +45,10 @@ jobs:
   check_pypi:
     needs: details
     runs-on: ubuntu-latest
-    env:
-      PACKAGE_NAME: ${{ env.PACKAGE_NAME }}
     steps:
       - name: Fetch information from PyPI
         run: |
-          response=$(curl -s https://pypi.org/pypi/$PACKAGE_NAME/json || echo "{}")
+          response=$(curl -s https://pypi.org/pypi/${{ env.PACKAGE_NAME }}/json || echo "{}")
           latest_previous_version=$(echo "$response" | jq -r "select(.releases != null) | .releases | keys_unsorted | last")
           if [ -z "$latest_previous_version" ] || [ "$latest_previous_version" == "null" ]; then
             echo "Package not found or no versions. Defaulting to 0.0.0"
@@ -72,8 +70,6 @@ jobs:
   setup_and_build:
     needs: [details, check_pypi]
     runs-on: ubuntu-latest
-    env:
-      PACKAGE_NAME: ${{ env.PACKAGE_NAME }}
     steps:
       - uses: actions/checkout@v2
 
